# pokeplatinum

./: .clang-format  .clang-format-ignore  .clang-format-include  .clangd  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  build.sh  clean.sh  code_files_glob.txt  common.mk  config.sh  filesystem.mk  fixup_elf2.py  force_active.mk  format.sh  frcmds.txt  gen_compile_commands.py  global.inc  lsf_renames.csv  main.lsf  make_tools.mk  meson.build  meson.options  platinum.sha1  rename_file.py  replace.py  replace_and_clear.py  replacelib.py  replacements.csv  requirements.txt  rerename_files.py  rerename_files_and_clear.py  (+4 more)
consts/: abilities.json  badges.json  battle.json  battle_subscripts.json  btlcmd.json  catching_show.json  game_records.json  gender.json  global.json  items.json  journal.json  map.json  meson.build  movement.json  moves.json  narc_files.json  pokemon.json  poketch.json  scrcmd.json  sdat.json  shadows.json  species.json  sprites.json  tm_learnset.json  trainer.json  trainer_ai.json
lib/crypto/: meson.build
lib/gds/: meson.build
lib/spl/: meson.build
platinum.us/: banner.bnr  banner.bsf  filesys.csv  filesys.sha1  main.lsf  main.sha1  meson.build  res.sha1  rom.rsf  rom.sha1  rom_header_template_rev0.sbin  rom_header_template_rev1.sbin  rom_rev0.ini  rom_rev0.sha1  rom_rev1.ini  rom_rev1.sha1  sbins.sha1  sbins_rev0.sha1  sbins_rev1.sha1  sbins_shared.sha1
res/: meson.build
res/arc/: area_win_gra.narc  bm_anime_list.narc  meson.build  plgym_ghost.narc
res/battle/: meson.build
res/contest/: meson.build
res/data/: btower_canm.json  btower_celact.json  btower_cell.json  btower_chr.json  btower_pal.json  fldtanime.narc  meson.build  plist_canm.json  plist_canm.resdat  plist_cell.json  plist_chr.json  plist_h.json  plist_pal.json  porucase_canm.json  porucase_celact.json  porucase_cell.json  porucase_chr.json  porucase_pal.json  pst_canm.json  pst_canm.resdat  pst_cell.json  pst_chr.json  pst_h.json  pst_pal.json  shop_canm.json  shop_cell.json  shop_chr.json  shop_h.json  shop_pal.json  tmapn_canm.json  tmapn_celact.json  tmapn_cell.json  tmapn_chr.json  tmapn_pal.json  uground_cell.json  uground_cellanm.json  uground_char.json  uground_char2.json  uground_clact.json  uground_pltt.json  (+1 more)
res/debug/: meson.build
res/field/: meson.build  move_tutors.json
res/fielddata/: meson.build
res/fonts/: font.pal  font_subscreen.json  font_system.json  font_unown.json  meson.build  pl_font.ignore  pl_font.order  screen_indicators.pal
res/graphic/: ending.narc  field_board.narc  meson.build  mystery.narc  pl_bag_gra.narc  pl_wifinote.narc  tmap_gra.narc  touch_subwindow.narc
res/graphics/: meson.build
res/items/: 348.pal  352.pal  366.pal  368.pal  370.pal  372.pal  377.pal  379.pal  380.pal  382.pal  384.pal  386.pal  396.pal  434.pal  436.pal  444.pal  446.pal  448.pal  450.pal  452.pal  454.pal  456.pal  458.pal  460.pal  462.pal  463.pal  465.pal  awakening.pal  blue_scarf.pal  blue_shard.pal  calcium.pal  carbos.pal  dire_hit.pal  draco_plate.pal  green_scarf.pal  green_shard.pal  heal_powder.pal  hyper_potion.pal  icicle_plate.pal  icon_anim.json  (+33 more)
res/itemtool/: meson.build
res/moves/: meson.build
res/msgdata/: meson.build
res/npc_trades/: charap_chatot.json  foppa_magikarp.json  gaspar_haunter.json  kazza_abra.json
res/pokemon/: form_registry.json  meson.build  move_tutors.json  sinnoh_pokedex.json  species_icons.order
res/pokemon_anims/: meson.build  pokemon_anim_script_unk_000.s  pokemon_anim_script_unk_001.s  pokemon_anim_script_unk_002.s  pokemon_anim_script_unk_003.s  pokemon_anim_script_unk_004.s  pokemon_anim_script_unk_005.s  pokemon_anim_script_unk_006.s  pokemon_anim_script_unk_007.s  pokemon_anim_script_unk_008.s  pokemon_anim_script_unk_009.s  pokemon_anim_script_unk_010.s  pokemon_anim_script_unk_011.s  pokemon_anim_script_unk_012.s  pokemon_anim_script_unk_013.s  pokemon_anim_script_unk_014.s  pokemon_anim_script_unk_015.s  pokemon_anim_script_unk_016.s  pokemon_anim_script_unk_017.s  pokemon_anim_script_unk_018.s  pokemon_anim_script_unk_019.s  pokemon_anim_script_unk_020.s  pokemon_anim_script_unk_021.s  pokemon_anim_script_unk_022.s  pokemon_anim_script_unk_023.s  pokemon_anim_script_unk_024.s  pokemon_anim_script_unk_025.s  pokemon_anim_script_unk_026.s  pokemon_anim_script_unk_027.s  pokemon_anim_script_unk_028.s  pokemon_anim_script_unk_029.s  pokemon_anim_script_unk_030.s  pokemon_anim_script_unk_031.s  pokemon_anim_script_unk_032.s  pokemon_anim_script_unk_033.s  pokemon_anim_script_unk_034.s  pokemon_anim_script_unk_035.s  pokemon_anim_script_unk_036.s  pokemon_anim_script_unk_037.s  pokemon_anim_script_unk_038.s  (+105 more)
res/poketool/: pl_pokezukan.narc  shinzukan.narc
res/prebuilt/: meson.build
res/resource/: meson.build
res/sound/: meson.build
res/text/: ability_descriptions.json  ability_names.json  ability_names_uppercase.json  acuity_cavern.gmm  acuity_cavern.json  acuity_lakefront.json  amity_square.gmm  amity_square.json  bag.gmm  bag.json  bag_pocket_names.json  bag_pocket_names_with_icons.gmm  bag_pocket_names_with_icons.json  ball_seal_names.gmm  ball_seal_names.json  (+1276 more)
src/: JubilifeLottery.c  app_storage_buffer.c  appearance.c  ascii_util.c  bag.c  bag_context.c  bag_system.c  battle_castle_save.c  battle_factory_save.c  battle_font.c  battle_frontier.c  battle_frontier_save.c  battle_frontier_stats.c  battle_hall_save.c  battle_hall_win_records.c  battle_regulation.c  battle_regulation_data.c  battle_regulation_validation.c  battle_sub_menu_cursor_position.c  berry_data.c  berry_patch_graphics.c  berry_patch_manager.c  berry_patches.c  berry_tag_data.c  bg_window.c  billboard.c  billboard_gfx_sequence.c  billboard_vram_transfer.c  binoculars_vista_lighthouse.c  boot.c  brightness_controller.c  byte_flag_set.c  camera.c  catching_show.c  catchrecords_save.c  cell_actor.c  cell_transfer.c  char_transfer.c  character_sprite.c  charcode.c  (+625 more)
tools/: btx0_palette.py  convert_callfunc_to_macros.py  meson.build
(+31153 files in other folders)
